--- a/debian/po/be.po
+++ b/debian/po/be.po
@@ -32,7 +32,7 @@ msgstr ""
 #: ../nobootloader.templates:4
 #, fuzzy
 msgid "Continue without boot loader"
-msgstr "    ?"
+msgstr "Працягваць"
 
 #. Type: note
 #. Description
@@ -43,7 +43,7 @@ msgid ""
 "system to boot Debian automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
-msgstr "  :"
+msgstr "у у у:"
 
 #. Type: note
 #. Description
@@ -61,7 +61,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr ":"
+msgstr "у:"
 
 #. Type: note
 #. Description
@@ -91,7 +91,7 @@ msgid ""
 "stage, the system will reboot, and the firmware will attempt to autoboot.  "
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
-msgstr "   :"
+msgstr "у у у у:"
 
 #. Type: note
 #. Description
@@ -112,13 +112,14 @@ msgstr ""
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
-msgstr "  ."
+msgstr "у у у."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
+#, fuzzy
 msgid "No boot loader installed"
-msgstr ""
+msgstr "Не"
 
 #. Type: note
 #. Description
@@ -127,7 +128,7 @@ msgstr ""
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
-msgstr " ."
+msgstr "Не у."
 
 #. Type: note
 #. Description
@@ -136,4 +137,4 @@ msgstr " ."
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
-msgstr "."
+msgstr "у."
