--- a/debian/po/eo.po
+++ b/debian/po/eo.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: eo\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-07-18 21:00+0200\n"
+"PO-Revision-Date: 2005-03-15 17:11+0100\n"
 "Last-Translator: Serge Leblanc <serge.leblanc@wanadoo.fr>\n"
 "Language-Team: Esperanto <debian-l10n-esperanto@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -29,7 +29,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Darigu sen praargo"
+msgstr "Daŭrigu sen praŝargo"
 
 #. Type: note
 #. Description
@@ -111,7 +111,7 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Neniu instala praargo"
+msgstr "Neniu instala praŝargo"
 
 #. Type: note
 #. Description
@@ -120,8 +120,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Neniu praargo estas instalita. Nu vi memvole decidis ne fari tion. Nu neniu "
-"praargo nuntempe stiras vian aparataron."
+"Neniu praŝargo estas instalita. Nu vi memvole decidis ne fari tion. Nu neniu "
+"praŝargo nuntempe stiras vian aparataron."
 
 #. Type: note
 #. Description
