--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-08-05 19:01+0200\n"
+"PO-Revision-Date: 2005-02-14 01:01+0100\n"
 "Last-Translator: Jacobo Tarrio <jtarrio@debian.org>\n"
 "Language-Team: Galego <trasno@ceu.fi.udc.es>\n"
 "MIME-Version: 1.0\n"
@@ -35,10 +35,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-" necesario estabrecer algunhas variables en Pegasos OpenFirmware para que o "
-"seu sistema inicie Debian automaticamente. Ao rematar a instalacin, o "
+"É necesario estabrecer algunhas variables en Pegasos OpenFirmware para que o "
+"seu sistema inicie Debian automaticamente. Ao rematar a instalación, o "
 "sistema ha arrincar. No indicativo de Pegasos OpenFirmware, estabreza as "
-"seguintes variables de OpenFirmware para permitir o inicio automtico:"
+"seguintes variables de OpenFirmware para permitir o inicio automático:"
 
 #. Type: note
 #. Description
@@ -60,7 +60,7 @@ msgstr ""
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
 msgstr ""
-"De xeito alternativo, tamn ha poder iniciar o ncleo manualmente "
+"De xeito alternativo, tamén ha poder iniciar o núcleo manualmente "
 "introducindo :"
 
 #. Type: note
@@ -79,7 +79,7 @@ msgstr "no indicativo de OpenFirmware."
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Configurando as variables do firmware para o inicio automtico"
+msgstr "Configurando as variables do firmware para o inicio automático"
 
 #. Type: note
 #. Description
@@ -91,12 +91,12 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-" necesario estabrecer algunhas variables no firmware de Netwinder NeTTrom "
+"É necesario estabrecer algunhas variables no firmware de Netwinder NeTTrom "
 "para que o seu sistema inicie Debian automaticamente. Ao rematar esta etapa "
-"de instalacin, o sistema ha iniciarse, e o firmware ha tratar de "
-"autoiniciarse. Pode abortalo premendo calquera tecla; despois hselle "
-"transferir ao sistema de ordes de NeTTrom onde ter que executar as seguintes "
-"ordes:"
+"de instalación, o sistema ha iniciarse, e o firmware ha tratar de "
+"autoiniciarse. Pode abortalo premendo calquera tecla; despois háselle "
+"transferir ao sistema de ordes de NeTTrom onde terá que executar as "
+"seguintes ordes:"
 
 #. Type: note
 #. Description
@@ -123,8 +123,9 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
 msgstr ""
-"S ha ter que facer isto unha vez. Despois, introduza a orde \"boot\" ou "
-"reinicie o sistema para continuar coa seguinte etapa da instalacin de Debian."
+"Só ha ter que facer isto unha vez. Despois, introduza a orde \"boot\" ou "
+"reinicie o sistema para continuar coa seguinte etapa da instalación de "
+"Debian."
 
 #. Type: note
 #. Description
@@ -139,8 +140,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Non se instalou ningn cargador de inicio. Pode ser porque decidiu non o "
-"facer ou porque a sa arquitectura especfica anda non ten soporte dun "
+"Non se instalou ningún cargador de inicio. Pode ser porque decidiu non o "
+"facer ou porque a súa arquitectura específica aínda non ten soporte dun "
 "cargador de inicio."
 
 #. Type: note
@@ -150,5 +151,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
 msgstr ""
-"Ha ter que iniciar a man co ncleo ${KERNEL} na particin ${BOOT} e ${ROOT} "
-"pasadas como argumentos para o ncleo."
+"Ha ter que iniciar a man co núcleo ${KERNEL} na partición ${BOOT} e ${ROOT} "
+"pasadas como argumentos para o núcleo."
