--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -25,7 +25,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-08-08 11:44+0200\n"
+"PO-Revision-Date: 2005-02-07 22:23+0100\n"
 "Last-Translator: Stefano Canepa <sc@linux.it>\n"
 "Language-Team:   Italian <debian-l10n-italian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -49,9 +49,9 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Alcune variabili dell'OpenFirmware di Pegasos vanno impostate perch il "
+"Alcune variabili dell'OpenFirmware di Pegasos vanno impostate perché il "
 "sistema Debian venga avviato in maniera automatica. Al termine della "
-"installazione il sistema verr riavviato. Al prompt dell'OpenFirmware di "
+"installazione il sistema verrà riavviato. Al prompt dell'OpenFirmware di "
 "Pegasos le seguenti variabili dovranno essere impostate per permettere "
 "l'avvio automatico:"
 
@@ -74,7 +74,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Diversamente sar possibile avviare il kernel a mano scrivendo:"
+msgstr "Diversamente sarà possibile avviare il kernel a mano scrivendo:"
 
 #. Type: note
 #. Description
@@ -104,12 +104,12 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Alcune variabili del firmware Netwinder NeTTrom vanno impostate perch il "
+"Alcune variabili del firmware Netwinder NeTTrom vanno impostate perché il "
 "sistema Debian venga avviato in maniera automatica. Al termine di questo "
-"passo di installazione il sistema verr riavviato e il firmware prover "
-"l'avvio automatico. Si pu bloccare questa operazione premendo un tasto "
-"qualsiasi; dopodich si avr accesso al \"NeTTrom command system\" dove devono "
-"essere eseguiti i seguenti comandi:"
+"passo di installazione il sistema verrà riavviato e il firmware proverà "
+"l'avvio automatico. Si può bloccare questa operazione premendo un tasto "
+"qualsiasi; dopodiché si avrà accesso al \"NeTTrom command system\" dove "
+"devono essere eseguiti i seguenti comandi:"
 
 #. Type: note
 #. Description
@@ -136,7 +136,7 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
 msgstr ""
-"Questa operazione dovr essere fatta solo la prima volta. Dopodich sar "
+"Questa operazione dovrà essere fatta solo la prima volta. Dopodiché sarà "
 "necessario eseguire il comando \"boot\" oppure riavviare il sistema per "
 "proseguire con la seconda fase dell'installazione di Debian."
 
@@ -153,8 +153,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Nessun \"boot loader\"  stato installato perch cos  stato richiesto o perch "
-"non ce ne sono ancora disponibili per questa architettura."
+"Nessun \"boot loader\" è stato installato perché così è stato richiesto o "
+"perché non ce ne sono ancora disponibili per questa architettura."
 
 #. Type: note
 #. Description
@@ -163,5 +163,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
 msgstr ""
-"Sar necessario avviare il computer manualmente utilizzando il kernel "
+"Sarà necessario avviare il computer manualmente utilizzando il kernel "
 "${KERNEL} dalla partizione ${BOOT}, usando ${ROOT} come argomento del kernel."
