--- a/debian/po/mk.po
+++ b/debian/po/mk.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mk\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-07-26 20:54+0200\n"
+"PO-Revision-Date: 2005-04-19 13:55+0200\n"
 "Last-Translator: Georgi Stanojevski <gogo@stavre>\n"
 "Language-Team: Macedonian <ossm-members@hedona.on.net.mk>\n"
 "MIME-Version: 1.0\n"
@@ -30,7 +30,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "  "
+msgstr "Продолжи без подигнувач"
 
 #. Type: note
 #. Description
@@ -41,8 +41,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"       Pegasos OpenFirmware          .        .    Pegasos OpenFirmware,    "
-"OpenFirmware      :"
+"Некои променливи треба да бидат поставени во Pegasos OpenFirmware за да може "
+"твојот систем да го бутира Дебиан автоматски. На крајот од инсталацијата "
+"системот ќе се ресетира. На промтот на Pegasos OpenFirmware, постави ги "
+"следните OpenFirmware променливи за да овозможиш автоматско бутирање:"
 
 #. Type: note
 #. Description
@@ -63,7 +65,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr ",        :"
+msgstr "Алтернативно, ќе можеш да го бутираш кернелот рачно внесувајќи:"
 
 #. Type: note
 #. Description
@@ -75,13 +77,13 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr " OpenFirmware ."
+msgstr "на OpenFirmware промтот."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "  firmware    "
+msgstr "Поставување на firmware променливите за автоматско бутирање"
 
 #. Type: note
 #. Description
@@ -93,8 +95,12 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"       Netwinder NeTTrom            .      ,           .            .     "
-"NeTTrom          :"
+"Некои променливи треба да бидат поставени во Netwinder NeTTrom фирмверот за "
+"твојот систем да може автоматски да го бутира Дебиан системот. На крајот на "
+"овој инсталационен стадиум, системо ќе се ресетира и фирмверот ќе проба "
+"автоматски да бутира. Можеш да се откажеш од ова со притискање на било кој "
+"тастер. Ќе бидеш пренесен бо NeTTrom командниот систем каде ќе треба да ги "
+"извршиш следниве команди:"
 
 #. Type: note
 #. Description
@@ -120,13 +126,16 @@ msgstr ""
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
-msgstr "      . ,   boot              ."
+msgstr ""
+"Ова треба да го направиш само еднаш. Потоа, внеси ја „boot“ командата или "
+"ресетирај го системот за да продолжиш во следната фаза на Дебиан "
+"инсталацијата."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "  "
+msgstr "Нема инсталиран подигнувач"
 
 #. Type: note
 #. Description
@@ -134,7 +143,9 @@ msgstr "  "
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
-msgstr "   ,               ."
+msgstr ""
+"Не беше инсталиран подигнувач, или бидејќи да не инсталираш или бидејќи "
+"твојата специфична архитектура не подржува употреба на подигнувач."
 
 #. Type: note
 #. Description
@@ -142,4 +153,6 @@ msgstr "   ,               ."
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
-msgstr "       ${KERNEL}   ${BOOT} ${ROOT}     ."
+msgstr ""
+"Ќе треба да бутираш рачно со кернелот ${KERNEL} на партицијата ${BOOT}и "
+"${ROOT} пренесен како аргумент на кернелот."
