--- a/debian/po/pa_IN.po
+++ b/debian/po/pa_IN.po
@@ -33,7 +33,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "    "
+msgstr "ਬੂਟ ਲੋਡਰ ਨਾਲ ਜਾਰੀ ਕਰੋ"
 
 #. Type: note
 #. Description
@@ -44,8 +44,9 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"           Pegasos OpenFirmware              Pegasos OpenFirmware  , -     "
-"OpenFirmware   :"
+"ਕੁਝ ਵੇਰੀਬਲ ਤੁਹਾਡੇ ਸਿਸਟਮ ਨੂੰ ਸਵੈ ਹੀ ਡੇਬੀਅਨ ਬੂਟ ਕਰਨ ਲਈ Pegasos OpenFirmware ਵਿੱਚ "
+"ਨਿਰਧਾਰਿਤ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਇੰਸਟਾਲੇਸ਼ਨ ਦੇ ਅੰਤ ਵਿੱਚ ਸਿਸਟਮ ਮੁੜ ਚੱਲੇਗਾ। Pegasos OpenFirmware "
+"ਪ੍ਰਾਉਟ ਤੇ, ਸਵ-ਬੂਟਿੰਗ ਯੋਗ ਕਰਨ ਲਈ ਹੇਠਲੇ OpenFirmware ਵੇਰੀਬਲ ਨਿਰਧਾਰਿਤ ਕਰੋ:"
 
 #. Type: note
 #. Description
@@ -56,17 +57,17 @@ msgid ""
 " setenv auto-boot-timeout 5000\n"
 " setenv auto-boot? true"
 msgstr ""
-" setenv - ${OF_BOOT_DEVICE}\n"
-" setenv - ${OF_BOOT_FILE}\n"
-" setenv -- 5000\n"
-" setenv -? "
+" setenv ਬੂਟ-ਜੰਤਰ ${OF_BOOT_DEVICE}\n"
+" setenv ਬੂਟ-ਫਾਇਲ ${OF_BOOT_FILE}\n"
+" setenv ਸਵੈ-ਬੂਟ-ਮਿਆਦ 5000\n"
+" setenv ਸਵੈ-ਬੂਟ? ਠੀਕ"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr " ,           :"
+msgstr "ਨਾਲ ਹੀ, ਤੁਸੀਂ ਇਹ ਭਰਕੇ ਕਰਨਲ ਨੂੰ ਦਸਤੀ ਬੂਟ ਕਰਨ ਦੇ ਯੋਗ ਹੋਵੋਗੇ:"
 
 #. Type: note
 #. Description
@@ -78,13 +79,13 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr "OpenFirmware  "
+msgstr "OpenFirmware ਪ੍ਰਾਉਟ ਤੇ।"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "    firmware     "
+msgstr "ਸਵੈ ਬੂਟ ਕਰਨ ਲਈ firmware ਵੇਰੀਬਲ ਨਿਰਧਾਰਿਤ ਕਰ ਰਿਹਾ ਹੈ"
 
 #. Type: note
 #. Description
@@ -96,8 +97,10 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"           Netwinder NeTTrom firmware           ,   ,  firmware "
-"-                NeTTrom          :"
+"ਕੁਝ ਵੇਰੀਬਲ ਤੁਹਾਡੇ ਸਿਸਟਮ ਨੂੰ ਸਵੈ ਹੀ ਡੇਬੀਅਨ ਬੂਟ ਕਰਨ ਲਈ Netwinder NeTTrom firmware ਵਿੱਚ "
+"ਨਿਰਧਾਰਿਤ ਕਰਨ ਦੀ ਲੋੜ ਹੈ। ਇਸ ਇੰਸਟਾਲੇਸ਼ਨ ਦੇ ਅੰਤ ਵਿੱਚ, ਸਿਸਟਮ ਮੁੜ ਚੱਲੇਗਾ, ਅਤੇ firmware ਸਵੈ-ਬੂਟ "
+"ਕਰੇਗਾ। ਤੁਸੀਂ ਕੋਈ ਸਵਿੱਚ ਦਬਾ ਕੇ ਇਸ ਨੂੰ ਅਧੂਰਾ ਖਤਮ ਕਰ ਸਕਦੇ ਹੋ। ਤੁਸੀਂ ਫਿਰ NeTTrom ਕਮਾਂਡ ਸਿਸਟਮ "
+"ਵਿੱਚ ਜਾਓਗੇ ਜਿੱਥੇ ਤੁਸੀਂ ਹੇਠਲੀਆਂ ਕਮਾਂਡਾਂ ਚਲਾਉਣੀਆਂ ਹਨ:"
 
 #. Type: note
 #. Description
@@ -115,7 +118,7 @@ msgstr ""
 "   setenv kernfile ${KERNFILE}\n"
 "   setenv rootdev ${ROOTDEV}\n"
 "   setenv cmdappend ${CMDAPPEND}\n"
-"   -"
+"   ਸਾਰੇ-ਸੰਭਾਲੋ"
 
 #. Type: note
 #. Description
@@ -123,13 +126,15 @@ msgstr ""
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
-msgstr "        , \"boot\"              "
+msgstr ""
+"ਤੁਹਾਨੂੰ ਇਹ ਸਿਰਫ ਇੱਕ ਵਾਰ ਕਰਨਾ ਪਵੇਗਾ। ਬਾਅਦ ਵਿੱਚ, \"boot\" ਕਮਾਂਡ ਦਿਓ ਜਾਂ ਸਿਸਟਮ ਨੂੰ ਅਗਲੀ "
+"ਡੇਬੀਅਨ ਇੰਸਟਾਲੇਸ਼ਨ ਸਥਿਤੀ ਜਾਰੀ ਕਰਨ ਲਈ ਮੁੜ ਚਲਾਓ।"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "    "
+msgstr "ਕੋਈ ਬੂਟ ਲੋਡਰ ਇੰਸਟਾਲ ਨਹੀਂ"
 
 #. Type: note
 #. Description
@@ -137,7 +142,9 @@ msgstr "    "
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
-msgstr "      ,               "
+msgstr ""
+"ਕੋਈ ਬੂਟ ਲੋਡਰ ਇੰਸਟਾਲ ਨਹੀਂ ਕੀਤਾ ਹੈ, ਜਾਂ ਤਾਂ ਤੁਸੀਂ ਚੁਣਿਆ ਨਹੀਂ ਜਾਂ ਤੁਹਾਡਾ ਖਾਸ ਨਿਰਮਾਣ ਬੂਟ ਲੋਡਰ ਨੂੰ "
+"ਸਹਿਯੋਗ ਨਹੀਂ ਦਿੰਦਾ।"
 
 #. Type: note
 #. Description
@@ -145,4 +152,6 @@ msgstr "      ,               "
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
-msgstr " ${BOOT}   ${KERNEL}             ${ROOT}  "
+msgstr ""
+"ਤੁਹਾਨੂੰ ${BOOT} ਭਾਗ ਤੇ ${KERNEL} ਕਰਨਲ ਨਾਲ ਬੂਟ ਕਰਨ ਦੀ ਜਰੂਰਤ ਪਵੇਗੀ ਅਤੇ ਕਰਨਲ ਮੁੱਲ ਤੌਰ ਤੇ "
+"${ROOT} ਦੇਣਾ ਪਵੇਗਾ।"
