--- a/debian/po/wo.po
+++ b/debian/po/wo.po
@@ -25,7 +25,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Kontine ci ludul sfkatu boot bi"
+msgstr "Kontine ci ludul sëfkatu boot bi"
 
 #. Type: note
 #. Description
@@ -36,10 +36,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Amna wariaabal yu u soxlaa sampu ci Pegasos OpenFirmware ngir  sa sistem bi "
-"mana boot Debian ci otomatik. Saa bu istalaasio bi aggee, sistem bi dana "
+"Amna wariaabal yu ñu soxlaa sampu ci Pegasos OpenFirmware ngir  sa sistem bi "
+"mana boot Debian ci otomatik. Saa bu istalaasioŋ bi aggee, sistem bi dana "
 "reboot. Ci prompt bu Pegasos OpenFirmware, na nga sampu wariaabal u "
-"OpenFirmware yii di w, ngire nga mana am boot u otomatik:"
+"OpenFirmware yii di ñëw, ngire nga mana am boot u otomatik:"
 
 #. Type: note
 #. Description
@@ -60,7 +60,8 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Bu loolu amul nak, du tee nga mana bo kernel bi ak sa loxo, boo dugle:"
+msgstr ""
+"Bu loolu amul nak, du tee nga mana bo kernel bi ak sa loxo, boo dugëlée:"
 
 #. Type: note
 #. Description
@@ -90,11 +91,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Amna wariaabal yu u soxlaa sampu ci Netwinder Nettrom firmware ngir  sa "
-"sistem bi mana boot Debian ci otomatik. Saa bu istalaasio bi aggee, sistem "
-"bi dana reboot, ta firmware bi dana jem a boot ci otomatik. Loolu nak da nga "
-"ko mana taxawal boo bse butoo bu mu mana doon. Bu boobaa da nga duggu ci "
-"sistem u komaande bu NeTTrom, buko defee nga doxal komaande yii di w:"
+"Amna wariaabal yu ñu soxlaa sampu ci Netwinder Nettrom firmware ngir  sa "
+"sistem bi mana boot Debian ci otomatik. Saa bu istalaasioŋ bi aggee, sistem "
+"bi dana reboot, ta firmware bi dana jéem a boot ci otomatik. Loolu nak da "
+"nga ko mana taxawal boo bësée butoo bu mu mana doon. Bu boobaa da nga duggu "
+"ci sistem u komaande bu NeTTrom, buko defee nga doxal komaande yii di ñëw:"
 
 #. Type: note
 #. Description
@@ -123,13 +124,13 @@ msgid ""
 msgstr ""
 "Lii benn yoon rekk nga koy soxlaa def.  Bu loolu jallee, bindal komaande "
 "\"boot\" walla nga reboot system bi ngir jall ca etaap bi ci toppu ci "
-"istalaasio u Debian."
+"istalaasioŋ u Debian."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Amul benn skatu boot bu u istale"
+msgstr "Amul benn sëkatu boot bu ñu istale"
 
 #. Type: note
 #. Description
@@ -138,8 +139,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Amul benn sfkatu boot bu u istale, liko waral mooy benn yaa tann ba koo def "
-"walla sa arcitektuur boobuu manul a doxal ab sfkatu boot."
+"Amul benn sëfkatu boot bu ñu istale, liko waral mooy benn yaa tann bañ koo "
+"def walla sa arcitektuur boobuu manul a doxal ab sëfkatu boot."
 
 #. Type: note
 #. Description
@@ -148,5 +149,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
 msgstr ""
-"Da nga soxlaa boot ak sa loxo kernel bii di ${KERNEL} nekk ci partiso "
-"${BOOT} ak ${ROOT} da nga leen di joxe u di ay argimaa yu kernel bi."
+"Da nga soxlaa boot ak sa loxo kernel bii di ${KERNEL} nekk ci partisoŋ "
+"${BOOT} ak ${ROOT} da nga leen di joxe ñu di ay argimaa yu kernel bi."
