--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer 1.0\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-07-27 03:19+0300\n"
+"PO-Revision-Date: 2005-06-19 15:11+0300\n"
 "Last-Translator: Guillem Jover <guillem@debian.org>\n"
 "Language-Team: Catalan <debian-l10n-catalan@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -38,9 +38,9 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Es necessita establir algunes variables al Pegasos OpenFirmware per a poder "
-"arrencar el sistema Debian automticament. A final de la installaci, el "
-"sistema arrencar de nou. A l'indicatiu de Pegasos OpenFirmware, establiu les "
-"segents variables d'OpenFirmware per a habilitar l'arrencada automtica:"
+"arrencar el sistema Debian automàticament. A final de la instal·lació, el "
+"sistema arrencarà de nou. A l'indicatiu de Pegasos OpenFirmware, establiu "
+"les següents variables d'OpenFirmware per a habilitar l'arrencada automàtica:"
 
 #. Type: note
 #. Description
@@ -81,7 +81,7 @@ msgstr "a l'indicatiu d'OpenFirmware."
 msgid "Setting firmware variables for automatic boot"
 msgstr ""
 "S'estan establint les variables del microprogramari per a l'arrencada "
-"automtica"
+"automàtica"
 
 #. Type: note
 #. Description
@@ -94,10 +94,10 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "\"Es necessita establir algunes variables al microprogramari Netwinder "
-"NetTrom per a poder arrencar el sistema Debian automticament. A final de la "
-"installaci, el sistema arrencar de nou, i el microprogramari tractar "
-"d'arrencar. Podeu avortar aix prement qualsevol tecla. Aleshores, entrareu "
-"al sistema d'ordres de NeTTrom on podeu executar les segents ordres:"
+"NetTrom per a poder arrencar el sistema Debian automàticament. A final de la "
+"instal·lació, el sistema arrencarà de nou, i el microprogramari tractarà "
+"d'arrencar. Podeu avortar això prement qualsevol tecla. Aleshores, entrareu "
+"al sistema d'ordres de NeTTrom on podeu executar les següents ordres:"
 
 #. Type: note
 #. Description
@@ -124,15 +124,15 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
 msgstr ""
-"Noms tindreu que fer aix una vegada. Desprs, introduu l'ordre boot o torneu "
-"a arrencar el sistema per a continuar amb el segent pas de la installaci de "
-"Debian."
+"Només tindreu que fer això una vegada. Després, introduïu l'ordre «boot» o "
+"torneu a arrencar el sistema per a continuar amb el següent pas de la "
+"instal·lació de Debian."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "No s'ha installat cap carregador"
+msgstr "No s'ha instal·lat cap carregador"
 
 #. Type: note
 #. Description
@@ -141,8 +141,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"No s'ha installat cap carregador, b perque heu triat no installar-lo, o "
-"perque la vostra arquitectura especfica encara no suporta un carregador."
+"No s'ha instal·lat cap carregador, bé perque heu triat no instal·lar-lo, o "
+"perque la vostra arquitectura específica encara no suporta un carregador."
 
 #. Type: note
 #. Description
@@ -151,5 +151,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
 msgstr ""
-"Necessitareu arrencar manualment amb el nucli ${KERNEL} en la partici "
+"Necessitareu arrencar manualment amb el nucli ${KERNEL} en la partició "
 "${BOOT}, amb ${ROOT} com a argument per al nucli."
