--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -38,8 +38,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-07-30 10:54+0200\n"
-"Last-Translator: Javier Fernndez-Sanguino Pea <jfs@debian.org>\n"
+"PO-Revision-Date: 2005-05-29 12:33+0200\n"
+"Last-Translator: Javier Fernández-Sanguino Peña <jfs@debian.org>\n"
 "Language-Team:  Debian Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -62,11 +62,11 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Debe establecer algunas variables en el OpenFirmware de Pegasos para poder "
-"arrancar el sistema Debian de forma automtica. Al final de la instalacin el "
-"sistema reiniciar. En el smbolo de espera de rdenes de OpenFirmware "
-"establezca las variables que se indican a continuacin para activar el "
-"arranque automtico:"
+"Debe establecer algunas variables en el «OpenFirmware» de Pegasos para poder "
+"arrancar el sistema Debian de forma automática. Al final de la instalación "
+"el sistema reiniciará. En el símbolo de espera de órdenes de «OpenFirmware» "
+"establezca las variables que se indican a continuación para activar el "
+"arranque automático:"
 
 #. Type: note
 #. Description
@@ -87,7 +87,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Tambin podr cargar el ncleo manualmente si introduce:"
+msgstr "También podrá cargar el núcleo manualmente si introduce:"
 
 #. Type: note
 #. Description
@@ -99,13 +99,13 @@ msgstr "${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr "en la lnea de rdenes de OpenFirmware."
+msgstr "en la línea de órdenes de «OpenFirmware»."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Estableciendo las variables del firmware para el arranque automtico"
+msgstr "Estableciendo las variables del firmware para el arranque automático"
 
 #. Type: note
 #. Description
@@ -118,10 +118,10 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Debe establecer algunas variables en el firmware del Netwinder NeTTrom para "
-"poder arrancar el sistema Debian de forma automtica. Al final de la "
-"instalacin el sistema rearrancar y el firmware intentar auto-arrancar. Puede "
-"cancelar este arranque pulsando cualquier tecla. Entrar en el sistema de "
-"rdenes de NeTTrom donde deber ejecutar las siguientes rdenes:"
+"poder arrancar el sistema Debian de forma automática. Al final de la "
+"instalación el sistema rearrancará y el firmware intentará auto-arrancar. "
+"Puede cancelar este arranque pulsando cualquier tecla. Entrará en el sistema "
+"de órdenes de NeTTrom donde deberá ejecutar las siguientes órdenes:"
 
 #. Type: note
 #. Description
@@ -148,14 +148,15 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
 msgstr ""
-"Deber hacer sto slo una vez. Despus, introduzca la orden \"boot\" o reinicie "
-"el sistema para proceder al siguiente paso de la instalacin de Debian."
+"Deberá hacer ésto sólo una vez. Después, introduzca la orden \"boot\" o "
+"reinicie el sistema para proceder al siguiente paso de la instalación de "
+"Debian."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "No se ha instalado ningn cargador de arranque"
+msgstr "No se ha instalado ningún cargador de arranque"
 
 #. Type: note
 #. Description
@@ -164,8 +165,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"No se ha instalado ningn cargador de arranque bien porque eligi no hacerlo o "
-"porque su arquitectura no soporta an ningn cargador de arranque."
+"No se ha instalado ningún cargador de arranque bien porque eligió no hacerlo "
+"o porque su arquitectura no soporta aún ningún cargador de arranque."
 
 #. Type: note
 #. Description
@@ -174,5 +175,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
 msgstr ""
-"Tendr que arrancar manualmente con el ncleo ${KERNEL} en la particin ${BOOT} "
-"e introducir ${ROOT} como parmetros de arranque del ncleo."
+"Tendrá que arrancar manualmente con el núcleo ${KERNEL} en la partición "
+"${BOOT} e introducir ${ROOT} como parámetros de arranque del núcleo."
