--- a/debian/po/fa.po
+++ b/debian/po/fa.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: fa\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-07-31 18:31+0430\n"
+"PO-Revision-Date: 2004-09-06 10:53+0200\n"
 "Last-Translator: Arash Bijanzadeh\n"
 "Language-Team:  <fa@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -26,7 +26,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "   "
+msgstr "بدون راه‌انداز ادامه میدهید؟"
 
 #. Type: note
 #. Description
@@ -54,7 +54,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "          ."
+msgstr "شما قادر خواهید بود در آینده این عملیات را لغو کنید."
 
 #. Type: note
 #. Description
@@ -109,7 +109,7 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "  ."
+msgstr "راه‌انداز نصب نشد."
 
 #. Type: note
 #. Description
@@ -117,7 +117,9 @@ msgstr "  ."
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
-msgstr "    .               ."
+msgstr ""
+"راه‌انداز رایانه نصب نشده است. یا به علت آنکه شما چنین خواسته‌اید و یا آنکه "
+"معماری شما هنوز پشتیبانی نمیگردد."
 
 #. Type: note
 #. Description
@@ -126,4 +128,6 @@ msgstr "    .               ."
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
-msgstr "           ${KERNEL_LOC}       ${ROOT}    ."
+msgstr ""
+"شما باید سیستم را به صورت دستی و با استفاده از ${KERNEL_LOC} به عنوان هسته "
+"و  پارامتر ${ROOT} برای آن راه‌اندازی نمایید."
