--- a/debian/po/fi.po
+++ b/debian/po/fi.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-04-06 17:27+0300\n"
+"PO-Revision-Date: 2004-10-28 14:37+0200\n"
 "Last-Translator: Tapio Lehtonen <tale@debian.org>\n"
 "Language-Team: Finnish <debian-l10n-finnish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -40,9 +40,9 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Joidenkin muuttujien arvot Pegasos OpenFirmwaressa on asetettava, jotta "
-"jrjestelm kynnistisi Debianin automaattisesti. Jrjestelm kynnistyy uudelleen "
-"asennuksen lopuksi. Aseta seuraavat muuttujat Pegasos OpenFirmwaren "
-"kehoitteessa, jotta automaattikynnistys toimii:"
+"järjestelmä käynnistäisi Debianin automaattisesti. Järjestelmä käynnistyy "
+"uudelleen asennuksen lopuksi. Aseta seuraavat muuttujat Pegasos "
+"OpenFirmwaren kehoitteessa, jotta automaattikäynnistys toimii:"
 
 #. Type: note
 #. Description
@@ -63,7 +63,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Tai voit kynnist ytimen itse komennolla:"
+msgstr "Tai voit käynnistää ytimen itse komennolla:"
 
 #. Type: note
 #. Description
@@ -81,7 +81,7 @@ msgstr "OpenFirmwaren kehoitteessa."
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Asetetaan laiteohjelmiston muuttujat automaattikynnistyst varten"
+msgstr "Asetetaan laiteohjelmiston muuttujat automaattikäynnistystä varten"
 
 #. Type: note
 #. Description
@@ -94,10 +94,11 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Joidenkin muuttujien arvot Netwinderin laiteohjelmistossa NeTTrom on "
-"asetettava, jotta jrjestelm kynnistisi Debianin automaattisesti. Tmn "
-"asennusvaiheen lopussa jrjestelm kynnistyy uudelleen ja laiteohjelmisto "
-"yritt automaattista kynnistyst. Tmn voi keskeytt mill tahansa nppimell, "
-"jolloin NeTTrom:n komentorivill voidaan antaa seuraavat komennot:"
+"asetettava, jotta järjestelmä käynnistäisi Debianin automaattisesti. Tämän "
+"asennusvaiheen lopussa järjestelmä käynnistyy uudelleen ja laiteohjelmisto "
+"yrittää automaattista käynnistystä. Tämän voi keskeyttää millä tahansa "
+"näppäimellä, jolloin NeTTrom:n komentorivillä voidaan antaa seuraavat "
+"komennot:"
 
 #. Type: note
 #. Description
@@ -124,8 +125,9 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
 msgstr ""
-"Tm on tehtv vain yhden kerran. Kyt sitten komentoa \"boot\"tai kynnist "
-"jrjestelm uudelleen edetksesi seuraavaan Debianin asennuksen vaiheeseen."
+"Tämä on tehtävä vain yhden kerran. Käytä sitten komentoa \"boot\"tai "
+"käynnistä järjestelmä uudelleen edetäksesi seuraavaan Debianin asennuksen "
+"vaiheeseen."
 
 #. Type: note
 #. Description
@@ -151,5 +153,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
 msgstr ""
-"Ydin ${KERNEL} on kynnistettv itse levyosiolta ${BOOT} ja vlitettv ${ROOT} "
-"parametrina."
+"Ydin ${KERNEL} on käynnistettävä itse levyosiolta ${BOOT} ja välitettävä "
+"${ROOT} parametrina."
