--- a/debian/po/hu.po
+++ b/debian/po/hu.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-05-13 18:04+0100\n"
+"PO-Revision-Date: 2004-11-09 23:24+0100\n"
 "Last-Translator: VEROK Istvan <vi@fsf.hu>\n"
 "Language-Team: Debian L10n Hungarian <debian-l10n-hungarian@lists.debian>\n"
 "MIME-Version: 1.0\n"
@@ -26,7 +26,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Rendszerbetlt nlkli tovbblps"
+msgstr "Rendszerbetöltő nélküli továbblépés"
 
 #. Type: note
 #. Description
@@ -37,9 +37,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"A Debian automatikus indtshoz a Pegasos OpenFirmware-ben nhny vltozt kell "
-"belltani. A telepts vgn a rendszer jra fog indulni. Az automatikus indtst az "
-"Pegasos OpenFirmware-parancssorban a kvetkezk megadsval rheti el:"
+"A Debian automatikus indításához a Pegasos OpenFirmware-ben néhány változót "
+"kell beállítani. A telepítés végén a rendszer újra fog indulni. Az "
+"automatikus indítást az Pegasos OpenFirmware-parancssorban a következők "
+"megadásával érheti el:"
 
 #. Type: note
 #. Description
@@ -60,7 +61,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Ha viszont rendszermagjt kzileg kvnja betlteni:"
+msgstr "Ha viszont rendszermagját kézileg kívánja betölteni:"
 
 #. Type: note
 #. Description
@@ -72,13 +73,13 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr "Ez a fenti OpenFirmware-parancssorral lehetsges."
+msgstr "Ez a fenti OpenFirmware-parancssorral lehetséges."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Firmware-vltozk automatikus indtsra belltsa"
+msgstr "Firmware-változók automatikus indításra beállítása"
 
 #. Type: note
 #. Description
@@ -90,11 +91,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"A Debian automatikus indtshoz a Netwinder NeTTrom firmware-ben be kell "
-"lltani egyes vltozkat. A telepts jelen szakasznak vgn a rendszer jra fog "
-"indulni, a firmware pedig megksrli az automatikus indulst. Ezt brmely "
-"billenty lenyomsval meggtolhatja. Ekkor a NeTTrom parancsrendszer jn el, itt "
-"adja ki a kvetkez utastsokat:"
+"A Debian automatikus indításához a Netwinder NeTTrom firmware-ben be kell "
+"állítani egyes változókat. A telepítés jelen szakaszának végén a rendszer "
+"újra fog indulni, a firmware pedig megkísérli az automatikus indulást. Ezt "
+"bármely billentyű lenyomásával meggátolhatja. Ekkor a NeTTrom "
+"parancsrendszer jön elő, itt adja ki a következő utasításokat:"
 
 #. Type: note
 #. Description
@@ -121,14 +122,14 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
 msgstr ""
-"Ezt csak egyszer kell elvgezni. Utna a \"boot\" paranccsal vagy a rendszer "
-"jraindtsval lphet a Debian-telepts kvetkez szakaszba."
+"Ezt csak egyszer kell elvégezni. Utána a \"boot\" paranccsal vagy a rendszer "
+"újraindításával léphet a Debian-telepítés következő szakaszába."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Nincs teleptve rendszerbetlt"
+msgstr "Nincs telepítve rendszerbetöltő"
 
 #. Type: note
 #. Description
@@ -137,8 +138,9 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"A rendszerre nem trtnt rendszerbetlt teleptse, vagy szndkos vlaszts folytn, "
-"vagy mert a rendszer architektrjn mg nem ltezik tmogatott rendszerbetlt."
+"A rendszerre nem történt rendszerbetöltő telepítése, vagy szándékos "
+"választás folytán, vagy mert a rendszer architektúráján még nem létezik "
+"támogatott rendszerbetöltő."
 
 #. Type: note
 #. Description
@@ -147,5 +149,6 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
 msgstr ""
-"A rendszert kzzel kell indtania: a megfelel partcin (${BOOT}) lev ${KERNEL} "
-"rendszermagnak adja meg paramterl a fjlrendszer gykert (${ROOT})."
+"A rendszert kézzel kell indítania: a megfelelő partíción (${BOOT}) levő "
+"${KERNEL} rendszermagnak adja meg paraméterül a fájlrendszer gyökerét "
+"(${ROOT})."
