--- a/debian/po/lt.po
+++ b/debian/po/lt.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lt\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-08-01 23:43+0300\n"
-"Last-Translator: Kstutis Bilinas <kebil@kaunas.init.lt>\n"
+"PO-Revision-Date: 2005-07-26 10:28+0300\n"
+"Last-Translator: Kęstutis Biliūnas <kebil@kaunas.init.lt>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,7 +27,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Tsti be pradinio kliklio"
+msgstr "Tęsti be pradinio įkėliklio"
 
 #. Type: note
 #. Description
@@ -38,10 +38,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Kai kurie Pegasos OpenFirmware kintamieji turi bti nustatyti, tam kad Js "
-"sistema galt automatikai kelti (boot) Debian'. diegimo pabaigoje, sistema "
-"bus perkraunama. Esant Pegasos OpenFirmware kvietimui,  nustatykite sekanius "
-"OpenFirmware kintamuosius, kad bt galimas automatinis klimas:"
+"Kai kurie Pegasos OpenFirmware kintamieji turi būti nustatyti, tam kad Jūsų "
+"sistema galėtų automatiškai įkelti (boot) Debian'ą. Įdiegimo pabaigoje, "
+"sistema bus perkraunama. Esant Pegasos OpenFirmware kvietimui,  nustatykite "
+"sekančius OpenFirmware kintamuosius, kad būtų galimas automatinis įkėlimas:"
 
 #. Type: note
 #. Description
@@ -62,7 +62,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Arba, Js galsite kelti branduol rankiniu bdu, vesdami :"
+msgstr "Arba, Jūs galėsite įkelti branduolį rankiniu būdu, įvesdami :"
 
 #. Type: note
 #. Description
@@ -80,7 +80,7 @@ msgstr "esant OpenFirmware kvietimui (prompt)."
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Mikroprogramos (firmware) kintamj nustatymas automatiniam klimui"
+msgstr "Mikroprogramos (firmware) kintamųjų nustatymas automatiniam įkėlimui"
 
 #. Type: note
 #. Description
@@ -92,12 +92,12 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Kai kurie Netwinder NeTTrom mikroprogramos (firmware) kintamieji turi bti "
-"nustatyti, tam kad Js sistema galt automatikai kelti (boot) Debian'. ios "
-"diegimo stadijos pabaigoje, sistema bus perkraunama, ir mikroprograma "
-"(fiemware) bandys atlikti automatin klim. Js galite nutraukti  proces, "
-"paspaud bet kur klavi. Tuomet Js atsidursite NeTTrom komandinje sistemoje, "
-"kur Js tursite paleisti vykdyti sekanias komandas:"
+"Kai kurie Netwinder NeTTrom mikroprogramos (firmware) kintamieji turi būti "
+"nustatyti, tam kad Jūsų sistema galėtų automatiškai įkelti (boot) Debian'ą. "
+"Šios įdiegimo stadijos pabaigoje, sistema bus perkraunama, ir mikroprograma "
+"(fiemware) bandys atlikti automatinį įkėlimą. Jūs galite nutraukti šį "
+"procesą, paspaudę bet kurį klavišą. Tuomet Jūs atsidursite NeTTrom "
+"komandinėje sistemoje, kur Jūs turėsite paleisti vykdyti sekančias komandas:"
 
 #. Type: note
 #. Description
@@ -124,14 +124,14 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
 msgstr ""
-"Js turite padaryti tai tik vien kart. Po to veskite komand \"boot\" arba "
-"perkraukite sistem, tam kad pereiti  sekant diegimo etap."
+"Jūs turite padaryti tai tik vieną kartą. Po to įveskite komandą \"boot\" "
+"arba perkraukite sistemą, tam kad pereiti į sekantį diegimo etapą."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Pradinis kliklis nediegtas"
+msgstr "Pradinis įkėliklis neįdiegtas"
 
 #. Type: note
 #. Description
@@ -140,8 +140,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Pradinis kliklis nediegtas, nes arba Js taip nusprendte, arba Js kompiuterio "
-"architektrai dar nra pradinio kliklio."
+"Pradinis įkėliklis neįdiegtas, nes arba Jūs taip nusprendėte, arba Jūsų "
+"kompiuterio architektūrai dar nėra pradinio įkėliklio."
 
 #. Type: note
 #. Description
@@ -150,5 +150,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
 msgstr ""
-"Jums teks atlikti kelt rankiniu bdu, naudojant branduol ${KERNEL}, esant "
-"disko skirsnyje ${BOOT}, ir perduodant jam parametr ${ROOT}."
+"Jums teks atlikti įkeltį rankiniu būdu, naudojant branduolį ${KERNEL}, "
+"esantį disko skirsnyje ${BOOT}, ir perduodant jam parametrą ${ROOT}."
