--- a/debian/po/sl.po
+++ b/debian/po/sl.po
@@ -18,9 +18,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: sl\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-07-23 08:50+0200\n"
-"Last-Translator: Jure uhalev <gandalf@owca.info>\n"
-"Language-Team: Slovenina <team@slo-tech.com>\n"
+"PO-Revision-Date: 2004-09-30 22:28+0100\n"
+"Last-Translator: Jure Čuhalev <gandalf@owca.info>\n"
+"Language-Team: Slovenščina <team@slo-tech.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -44,9 +44,9 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"e elite samodejno zagnati Debian, je potrebno nastaviti nekaj spremenljivk v "
-"Pegasos OpenFirmware.  Na koncu namestitve se bo sistem ponovno zagnal.  Ob "
-"pozivniku Pegasos OpenFirmware boste lahko rono zagnali jedro z:"
+"Če želite samodejno zagnati Debian, je potrebno nastaviti nekaj spremenljivk "
+"v Pegasos OpenFirmware.  Na koncu namestitve se bo sistem ponovno zagnal.  "
+"Ob pozivniku Pegasos OpenFirmware boste lahko ročno zagnali jedro z:"
 
 #. Type: note
 #. Description
@@ -67,7 +67,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Vedite, da boste lahko pozneje zagnali jedro rono z ukazom :"
+msgstr "Vedite, da boste lahko pozneje zagnali jedro ročno z ukazom :"
 
 #. Type: note
 #. Description
@@ -97,9 +97,9 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"e elite samodejno zagnati Debian, je potrebno nastaviti nekaj spremenljivk v "
-"strojnoprogramski opremi Netwinder NeTTrom.  Na koncu namestitve se bo "
-"sistem ponovno zagnal in poskusil s samozagonom.  Prekliete ga lahko s "
+"Če želite samodejno zagnati Debian, je potrebno nastaviti nekaj spremenljivk "
+"v strojnoprogramski opremi Netwinder NeTTrom.  Na koncu namestitve se bo "
+"sistem ponovno zagnal in poskusil s samozagonom.  Prekličete ga lahko s "
 "poljubno tipko.  Pristali boste v ukaznem sistemu NeTTrom, kjer morate "
 "izvesti naslednje ukaze:"
 
@@ -129,14 +129,14 @@ msgid ""
 "or reboot the system to proceed to the next Debian installation stage."
 msgstr ""
 "To boste morali storiti samo enkrat. Kasneje, vnesite \"boot\" ukaz ali "
-"ponovno zaenite raunalnik za nadaljevanje z naslednjim namesitvenim korakom "
-"Debiana."
+"ponovno zaženite računalnik za nadaljevanje z naslednjim namesitvenim "
+"korakom Debiana."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Ni nameenih zagonskih nalagalnikov"
+msgstr "Ni nameščenih zagonskih nalagalnikov"
 
 #. Type: note
 #. Description
@@ -145,8 +145,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Ni nameenih zagonskih nalagalnikov, ker ga niste eleli namestiti ali pa ga "
-"vaa arhitektura e ne podpira."
+"Ni nameščenih zagonskih nalagalnikov, ker ga niste želeli namestiti ali pa "
+"ga vaša arhitektura še ne podpira."
 
 #. Type: note
 #. Description
@@ -155,5 +155,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
 msgstr ""
-"Zagnati boste mogli rono z jedrom ${KERNEL} na razdelkih ${BOOT} in ${ROOT}, "
-"podanih kot argumenti jedra."
+"Zagnati boste mogli ročno z jedrom ${KERNEL} na razdelkih ${BOOT} in "
+"${ROOT}, podanih kot argumenti jedra."
