--- a/debian/po/sq.po
+++ b/debian/po/sq.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-06-23 19:48+0200\n"
+"PO-Revision-Date: 2004-09-30 23:36+0200\n"
 "Last-Translator:  Elian Myftiu <elian@alblinux.net>\n"
 "Language-Team: Debian L10n Albanian <debian-l10n-albanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -40,10 +40,11 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Dusa t ndryshueshme kan nevoj t caktohen n Pegasos OpenFirmware n mnyr q "
-"sistemi tnd t nis Debian automatikisht.  N fund t instalimit, sistemi do t "
-"riniset.  N rreshtin e komands Pegasos OpenFirmware, cakto t ndryshueshmet e "
-"mposhtme OpenFirmware pr t aktivizuar nisjen automatike:"
+"Dusa të ndryshueshme kanë nevojë të caktohen në Pegasos OpenFirmware në "
+"mënyrë që sistemi tënd të nisë Debian automatikisht.  Në fund të instalimit, "
+"sistemi do të riniset.  Në rreshtin e komandës Pegasos OpenFirmware, cakto "
+"të ndryshueshmet e mëposhtme OpenFirmware për të aktivizuar nisjen "
+"automatike:"
 
 #. Type: note
 #. Description
@@ -64,7 +65,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Prndryshe, do mund t nissh kernelin manualisht duke prdorur :"
+msgstr "Përndryshe, do mund të nisësh kernelin manualisht duke përdorur :"
 
 #. Type: note
 #. Description
@@ -76,13 +77,13 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr "n rreshtin e komands OpenFirmware."
+msgstr "në rreshtin e komandës OpenFirmware."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Duke caktuar t ndryshueshmet firmware pr nisjen automatike"
+msgstr "Duke caktuar të ndryshueshmet firmware për nisjen automatike"
 
 #. Type: note
 #. Description
@@ -94,11 +95,12 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Disa t ndryshueshme kan nevoj t caktohen n Netwinder NetTrom firmware n mnyr "
-"q sistemi tnd t nis Debian automatikisht.  N fund t ktij hapi instalimi, "
-"sistemi do t riniset, dhe firmware do mundohet t niset automatikisht.  Mund "
-"ta ndalosh kt duke shtypur nj tast fardo. M pas do kalosh n sistemin e "
-"komandave NeTTrom ku duhet t ekzekutosh komandat e mposhtme:"
+"Disa të ndryshueshme kanë nevojë të caktohen në Netwinder NetTrom firmware "
+"në mënyrë që sistemi tënd të nisë Debian automatikisht.  Në fund të këtij "
+"hapi instalimi, sistemi do të riniset, dhe firmware do mundohet të niset "
+"automatikisht.  Mund ta ndalosh këtë duke shtypur një tast çfarëdo. Më pas "
+"do kalosh në sistemin e komandave NeTTrom ku duhet të ekzekutosh komandat e "
+"mëposhtme:"
 
 #. Type: note
 #. Description
@@ -125,14 +127,14 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
 msgstr ""
-"Kt duhet ta bsh vetm nj her.  M pas, shkruaj komandn \"boot\" ose rinis "
-"sistemin pr t vazhduar me fazn tjetr t instalimit t Debian-it."
+"Këtë duhet ta bësh vetëm një herë.  Më pas, shkruaj komandën \"boot\" ose "
+"rinis sistemin për të vazhduar me fazën tjetër të instalimit të Debian-it."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Asnj ngarkues nisjeje i instaluar"
+msgstr "Asnjë ngarkues nisjeje i instaluar"
 
 #. Type: note
 #. Description
@@ -141,8 +143,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Nuk sht instaluar asnj ngarkues nisjeje, ose sepse e zgjodhe vet, ose sepse "
-"arkitektura e veant nuk suporton akoma nj t till."
+"Nuk është instaluar asnjë ngarkues nisjeje, ose sepse e zgjodhe vetë, ose "
+"sepse arkitektura e veçantë nuk suporton akoma një të tillë."
 
 #. Type: note
 #. Description
@@ -151,5 +153,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
 msgstr ""
-"Do duhet ta nissh manualisht me kernelin ${KERNEL} n ndarjen ${BOOT} dhe "
-"duke kaluar ${ROOT} si argument t kernelit."
+"Do duhet ta nisësh manualisht me kernelin ${KERNEL} në ndarjen ${BOOT} dhe "
+"duke kaluar ${ROOT} si argument të kernelit."
