--- a/debian/po/uk.po
+++ b/debian/po/uk.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: uk\n"
 "POT-Creation-Date: 2005-02-04 09:36-0700\n"
-"PO-Revision-Date: 2005-08-02 16:36+0300\n"
+"PO-Revision-Date: 2005-07-21 22:12+0300\n"
 "Last-Translator: Eugeniy Meshcheryakov <eugen@univ.kiev.ua>\n"
 "Language-Team: Ukrainian <ukrainian>\n"
 "MIME-Version: 1.0\n"
@@ -29,7 +29,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "  "
+msgstr "Продовжити без завантажувача"
 
 #. Type: note
 #. Description
@@ -40,7 +40,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"   Debian    Pegasos OpenFirmware.     .   ,       Pegasos OpenFirmware:"
+"Для автоматичного завантаження Debian необхідно встановити змінні Pegasos "
+"OpenFirmware. Після закінчення встановлення система перезвантажиться. Для "
+"автоматичного завантаження, встановіть наступні змінні із командного рядка "
+"Pegasos OpenFirmware:"
 
 #. Type: note
 #. Description
@@ -61,7 +64,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "      :"
+msgstr "Також ви можете завантажити ядро вручну ввівши:"
 
 #. Type: note
 #. Description
@@ -73,13 +76,15 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr "   OpenFirmware."
+msgstr "в командному рядку OpenFirmware."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "       "
+msgstr ""
+"Встановлюються змінні вбудованого програмного забезпечення для автоматичного "
+"завантаження"
 
 #. Type: note
 #. Description
@@ -91,8 +96,12 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"   Debian       Netwinder NeTTrom.              .      - .        "
-"NeTTrom,       :"
+"Для автоматичного завантаження Debian необхідно встановити змінні "
+"вбудованого програмного забезпечення Netwinder NeTTrom. Після закінчення "
+"цього етапу встановлення система перезвантажиться та вбудоване програмне "
+"забезпечення намагатиметься завантажитися автоматично. Ви можете перервати "
+"це натиснувши будь-яку клавішу. Після цього ви попадете в командну систему "
+"NeTTrom, де вам потрібно буде виконати наступні команди:"
 
 #. Type: note
 #. Description
@@ -118,13 +127,15 @@ msgstr ""
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next Debian installation stage."
-msgstr "       .  ,  boot        Debian."
+msgstr ""
+"Вам потрібно буде зробити це тільки один раз. Після цього, наберіть „boot“ "
+"або перезавантажте систему для наступного етапу встановлення Debian."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "  "
+msgstr "Завантажувач не встановлений"
 
 #. Type: note
 #. Description
@@ -132,7 +143,9 @@ msgstr "  "
 msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
-msgstr "   ,      ,       '  ."
+msgstr ""
+"Завантажувач не був встановлений, оскільки ви вирішили цього не робити, або "
+"встановлення завантажувача на ваш тип комп'ютера поки неможливе."
 
 #. Type: note
 #. Description
@@ -140,4 +153,6 @@ msgstr "   ,      ,       '  ."
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as kernel argument."
-msgstr "       ${KERNEL}   ${BOOT}   ${ROOT} ,   ."
+msgstr ""
+"Ви повинні будете завантажитися вручну з ядром ${KERNEL} на розділі ${BOOT} "
+"та з ${ROOT} переданим, як аргумент ядра."
