--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nobootloader (1.05) UNRELEASED; urgency=low
+nobootloader (1.05) unstable; urgency=low
 
   [ Colin Watson ]
   * Update GPL notices with the FSF's new address.
@@ -7,7 +7,13 @@ nobootloader (1.05) UNRELEASED; urgency=low
   * Update for rename of link_in_boot template, depend on new base-installer
     that contains the new one.
 
- -- Joey Hess <joeyh@debian.org>  Tue,  9 Aug 2005 15:17:34 -0400
+  * Updated translations: 
+    - German (de.po) by Holger Wansing
+    - Lithuanian (lt.po) by Kęstutis Biliūnas
+    - Dutch (nl.po) by Bart Cornelis
+    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
+
+ -- Joey Hess <joeyh@debian.org>  Tue,  9 Aug 2005 15:39:50 -0400
 
 nobootloader (1.04) unstable; urgency=low
 
