* Add a missing "a" to one of the templates. * While I'm at it, remove some Debian branding, especially some that reads   better without the "Debian".
r30046

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nobootloader (1.06) UNRELEASED; urgency=low
+
+  * Add a missing "a" to one of the templates.
+  * While I'm at it, remove some Debian branding, especially some that reads
+    better without the "Debian".
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 18 Aug 2005 11:06:10 -0400
+
 nobootloader (1.05) unstable; urgency=low
 
   [ Colin Watson ]
