[l10n] [l10n-sync] Run debconf-updatepo on all packages
r30058

--- a/debian/po/fa.po
+++ b/debian/po/fa.po
@@ -11,7 +11,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: fa\n"
-"POT-Creation-Date: 2005-02-04 09:36-0700\n"
+"POT-Creation-Date: 2005-08-18 18:32-0600\n"
 "PO-Revision-Date: 2004-09-06 10:53+0200\n"
 "Last-Translator: Arash Bijanzadeh\n"
 "Language-Team:  <fa@li.org>\n"
@@ -33,7 +33,7 @@ msgstr "بدون راه‌انداز ادامه میدهید؟"
 #: ../nobootloader.templates:8
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
-"system to boot Debian automatically.  At the end of the installation, the "
+"system to boot linux automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
@@ -79,7 +79,7 @@ msgstr ""
 #: ../nobootloader.templates:30
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
-"your system to boot Debian automatically.  At the end of this installation "
+"your system to boot linux automatically.  At the end of this installation "
 "stage, the system will reboot, and the firmware will attempt to autoboot.  "
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
@@ -102,7 +102,7 @@ msgstr ""
 #: ../nobootloader.templates:30
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
-"or reboot the system to proceed to the next Debian installation stage."
+"or reboot the system to proceed to the next installation stage."
 msgstr ""
 
 #. Type: note
@@ -127,7 +127,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
-"${BOOT} and ${ROOT} passed as kernel argument."
+"${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
 "شما باید سیستم را به صورت دستی و با استفاده از ${KERNEL_LOC} به عنوان هسته "
 "و  پارامتر ${ROOT} برای آن راه‌اندازی نمایید."
