--- a/debian/po/be.po
+++ b/debian/po/be.po
@@ -16,7 +16,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: be\n"
-"POT-Creation-Date: 2005-02-04 09:36-0700\n"
+"POT-Creation-Date: 2005-08-18 18:32-0600\n"
 "PO-Revision-Date: 2005-04-09 14:08+0300\n"
 "Last-Translator: Andrei Darashenka <adorosh2@it.org.by>\n"
 "Language-Team: Byelarusian <be@li.org>\n"
@@ -40,7 +40,7 @@ msgstr "Працягваць"
 #, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
-"system to boot Debian automatically.  At the end of the installation, the "
+"system to boot linux automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr "у у у:"
@@ -87,7 +87,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
-"your system to boot Debian automatically.  At the end of this installation "
+"your system to boot linux automatically.  At the end of this installation "
 "stage, the system will reboot, and the firmware will attempt to autoboot.  "
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
@@ -111,7 +111,7 @@ msgstr ""
 #, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
-"or reboot the system to proceed to the next Debian installation stage."
+"or reboot the system to proceed to the next installation stage."
 msgstr "у у у."
 
 #. Type: note
@@ -136,5 +136,5 @@ msgstr "Не у."
 #, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
-"${BOOT} and ${ROOT} passed as kernel argument."
+"${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr "у."
