--- a/debian/po/templates.pot
+++ b/debian/po/templates.pot
@@ -1,21 +1,12 @@
-#
-#    Translators, if you are not familiar with the PO format, gettext
-#    documentation is worth reading, especially sections dedicated to
-#    this format, e.g. by running:
-#         info -n '(gettext)PO Files'
-#         info -n '(gettext)Header Entry'
-#
-#    Some information specific to po-debconf are available at
-#            /usr/share/doc/po-debconf/README-trans
-#         or http://www.debian.org/intl/l10n/po-debconf/README-trans
-#
-#    Developers do not need to manually edit POT or PO files.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR Free Software Foundation, Inc.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2005-02-04 09:36-0700\n"
+"POT-Creation-Date: 2005-08-18 18:32-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -35,7 +26,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
-"system to boot Debian automatically.  At the end of the installation, the "
+"system to boot linux automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
@@ -80,7 +71,7 @@ msgstr ""
 #: ../nobootloader.templates:30
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
-"your system to boot Debian automatically.  At the end of this installation "
+"your system to boot linux automatically.  At the end of this installation "
 "stage, the system will reboot, and the firmware will attempt to autoboot.  "
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
@@ -103,7 +94,7 @@ msgstr ""
 #: ../nobootloader.templates:30
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
-"or reboot the system to proceed to the next Debian installation stage."
+"or reboot the system to proceed to the next installation stage."
 msgstr ""
 
 #. Type: note
@@ -125,5 +116,5 @@ msgstr ""
 #: ../nobootloader.templates:50
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
-"${BOOT} and ${ROOT} passed as kernel argument."
+"${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
